docs: swagger annotations for auth route
